--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.atlantizstudios.com/">Website</a>
-    <p class="copyright">© 2018 Name Surname.</p>
+    <p class="copyright">© 2019 Mahoutin Hounsou.</p>
   </div>
 
 
