--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-me">
-    <h1>I' am Mahoutin</h1>
+    <h1>I' am Alexander</h1>
+    
     <h2>A Web and App developer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-me">
     <img src="images/mountain.png" alt="land.me">
@@ -23,9 +24,10 @@
   <div class="middle-container">
     <div class="profile">
       <img src="images/mahoutinpro.png" alt="mahoutinpro">
-      <h2>Hello.</h2>
-      <p><em>The World Next<strong> Tech Entrepreneur</<strong></strong></em></p>
-      <p class="intro"> I am a Web and Software Developer. I love Tea and natural Juice </p>
+      <h2>Hello and Welcome</h2>
+      <h3>My End Game</h3>
+      <p><em> Become the World Next<strong> Tech Entrepreneur</strong> and make the world a better place for everyone.</em></p>
+      <p class="intro"> I am a Web and App Developer. I love Tea and Natural Juices </p>
     </div>
     <hr>
     <div class="skills">
@@ -33,29 +35,61 @@
       <div class="skill-row">
         <img class="coding" src="images/coding.png" alt="coding-skills">
         <h3>Web and App developpement</h3>
-        <p class="anti-float-1">I am a Web and app delveloper, put the visio together and creating something out of the box </p>
+        <p class="anti-float-1">
+          <ul>
+            <li>Html & Css</li>
+            <br>
+            <li>JavaScript and Node.js</li>
+            <br>
+            <li>React.js and Redux</li>
+          </ul>
+        </p>
+        <h3>Projects and Experiences</h3>
+        <p class="anti-float-1">
+          <ul>
+            <li>Atlantizstudios.com : Videography Business Website</li>
+            <br>
+            <li>Sanctuary On Task: Web app for tasks management</li>
+            <br>
+            <li>Software Engineer intern at the Home Depot Atlanta, Georgia</li>
+          </ul>
+        </p>
       </div>
       <div class="skill-row">
         <img class="film" src="images/movie.png" alt="video-skills">
-        <h3>Director and video Editing </h3>
-        <p class="anti-float-2">Writing scripts , everyting involve in the post production of filming.</p>
+        <h3>Films Director and video Editing </h3>
+        <p class="anti-float-2">
+            <ul>
+                <li>Writing creative scripts</li>
+                <br>
+                <li>Script Execution and Budget</li>
+                <br>
+                <li>Post Production Work</li>
+              </ul>
+          </p>
+
+          <h3>Projects and Experiences</h3>
+          <p class="anti-float-2">
+            <ul>
+              <li> <a class="footer-link" href="https://www.atlantizstudios.com/">Atlantizstudios.com</a></li>
+          </p>       
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>If you love sports , arts and musics as much as i do. </h3>
-      <p>Love to create new thing as much as I do. Let's talk about the world next great thing! We can code while talking about it!</p>
-      <a class="butn" href="mailto:mahoutinhounsou@outlook.com">CONTACT ME</a>
+      <h3>If you love sports , Technologies, arts and musics as much as i do. </h3>
+      <p>Love to create new things as much as I do. Let's talk about the world next great thing! We can code while talking about it!</p>
+      <a class="butn" href="mailto:hounsoumahoutin@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/mahoutin-hounsou-a57046154/">LinkedIn</a>
+    <!-- <a class="footer-link" href="https://twitter.com/">Twitter</a> -->
     <a class="footer-link" href="https://www.atlantizstudios.com/">Website</a>
-    <p class="copyright">© 2019 Mahoutin Hounsou.</p>
+    <p class="copyright">© 2019 Alexander Hounsou.</p>
   </div>
 
 
